--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "UNLICENSED",
   "devDependencies": {
-    "eslint": "9.1.1"
+    "eslint": "9.1.1",
+    "jest": "29.7.0"
   }
 }
